# winGetConst

./: .gitignore  Cargo.toml  ReadMe.md  ToDo.md  graphql.config.yml
data/: winConst_All_126k.txt.rar  winConst_Blank_14k.txt.rar  winConst_Valid_112k.txt.rar  winConst_Valid_ziggle_180k.txt.rar  winConst_vs_ziggle_extra_0.004k.txt.rar
data/1 WinMD/: winConst_bindgen_All_185k.rar  winConst_bindgen_All_185k_dedupe.log.rar  winConst_bindgen_All_185k_dedupe.rar  winConst_dupe 150.log.rar  winConst_vs_ziggle_diff_value 1 minus 0.3k.log.rar  winConst_vs_ziggle_diff_value 2 misc 0.3k.log.rar  winConst_vs_ziggle_diff_value 3 struct 2.4k.log.rar  winConst_vs_ziggle_extra 9k.log.rar
data/2 rustdoc/: winConst_vs_ziggle_blank_12k.txt.rar  winConst_vs_ziggle_diff_value_0.09k.txt.rar  winConst_vs_ziggle_missing_52k.txt.rar
helper/: Cargo.toml
helper/src/: lib.rs  parser.rs
src/: trustfall_rustdoc.rs  trustfall_rustdoc_old.rs  winGetConst.bin.rs  winGetConst.lib.rs
src/query/: pub_module_level_const_missing.ron  query_const.ron  query_const_full.ron
test_crates/pub_module_level_const_missing/new/: Cargo.toml
test_crates/pub_module_level_const_missing/new/src/: new.lib.rs
test_crates/pub_module_level_const_missing/old/: Cargo.toml
test_crates/pub_module_level_const_missing/old/src/: old.lib.rs
win/libs/bindgen/: Cargo.toml
win/libs/bindgen/src/: lib.rs
win/libs/bindgen/src/metadata/: mod.rs
win/libs/bindgen/src/rdl/: fmt.rs
win/libs/bindgen/src/rust/: constants.rs  interfaces.rs  mod.rs  standalone.rs  try_format.rs  writer.rs
win/libs/bindgen/src/tokens/: runtime.rs  to_tokens.rs  token_stream.rs
