[package]  # help on keys doc.rust-lang.org/cargo/reference/manifest.html
name   	= "dummy"
version	= "0.1.0"
authors	= ["{{authors}}"]
edition	= "2021"
build  	= "build.rs"

[workspace]
members = ["helper"]	# relative to the workspace root

[[bin]]
name	= "dummy_bin"
path	= "src/dummy.bin.rs"

[lib]
name      	= "dummy_lib"
path      	= "src/dummy.lib.rs"
crate-type	= ['lib','cdylib']

[dependencies]
helper   	= {path="helper"}
log      	= "0.4"
stderrlog	= "0.5"
anyhow   	= "1.0"
faccess  	= "0.2"

[build-dependencies]
log	= "0.4"

[profile.release]
strip        	= true   	# Auto strip symbols from the binary (included by default on Linux/macOS)
opt-level    	= 3      	# |3|     s=size, z=size+
lto          	= true   	# |false| Sets link-time optimization.
codegen-units	= 1      	# |16|    reduce parallel code generation
panic        	= "abort"	# |unwind| save ~20k w/o drop-on-panic cleanup and std::panic::catch_unwind

# Overrides doc.rust-lang.org/nightly/cargo/reference/profiles.html#overrides
# [profile.dev.package."*"] # build dependencies in release mode to make the main app faster
# opt-level	= 3	# |3|     s=size, z=size+
# panic/lto/rpath can't be overriden

# [profile.dev.build-override] # build scripts and proc-macros
# opt-level	= 3	# |3|     s=size, z=size+
